# py-polyglot

./: .gitignore  CHANGELOG.md  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
site/src/content/docs/es/handbook/: index.md
site/src/content/docs/fr/handbook/: index.md
site/src/content/docs/handbook/: architecture.md  configuration.md  getting-started.md  index.md  mcp-server.md  security.md  usage.md
site/src/content/docs/hi/handbook/: index.md
site/src/content/docs/it/handbook/: index.md
site/src/content/docs/ja/handbook/: index.md
site/src/content/docs/pt-br/handbook/: index.md
site/src/content/docs/zh/handbook/: index.md
site/src/styles/: starlight-custom.css
src/pypolyglot/: __init__.py  __main__.py  cache.py  errors.py  glossary.py  languages.py  markdown.py  ollama.py  polish.py  semaphore.py  server.py  translate.py  translate_all.py  validate.py
tests/: test_cache.py  test_errors.py  test_glossary.py  test_languages.py  test_markdown.py  test_ollama.py  test_polish.py  test_semaphore.py  test_translate.py  test_translate_all.py  test_validate.py
