[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-polyglot"
version = "1.0.0"
description = "Local GPU translation Python library + MCP server — TranslateGemma via Ollama, 57 languages, zero cloud dependency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
keywords = ["translation", "ollama", "mcp", "gpu", "translategemma", "polyglot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.25.0",
]

[project.scripts]
py-polyglot = "pypolyglot.__main__:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/py-polyglot"
Repository = "https://github.com/mcp-tool-shop-org/py-polyglot"
Issues = "https://github.com/mcp-tool-shop-org/py-polyglot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pypolyglot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
